--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -32,6 +32,7 @@
         "file-saver": "^2.0.0",
         "moment": "^2.22.2",
         "moment-timezone": "^0.5.21",
+        "ng2-file-upload": "^1.3.0",
         "ngx-moment": "^3.2.0",
         "rxjs": "^6.3.3",
         "rxjs-compat": "^6.3.3",
