#65922, 65921 - updated view of select controls. Added * if required to label.

--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
@@ -38,6 +38,7 @@
     <CodeAnalysisRuleSet />
     <DocumentationFile>bin\DH.Helpdesk.WebApi.xml</DocumentationFile>
     <LangVersion>default</LangVersion>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
