--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
@@ -13,6 +13,7 @@
   <appSettings>
     <add key="log4net.Internal.Debug" value="false" />
     <add key="dh_filesDirectory" value="#{FilesDirectory}" />
+    <add key="dh_selfserviceaddress" value="#{SelfServiceAddress}" />
     <add key="DefaultCulture" value="sv" />
     <add key="SmtpServer" value="localhost" />
     <add key="SmtpPort" value="25" />
