--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
@@ -191,6 +191,8 @@
   <ItemGroup>
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="Controllers\PerfomersController.cs" />
+    <Compile Include="Controllers\WorkingGroupsController.cs" />
+    <Compile Include="Infrastructure\ActionResults\ForbiddenResult.cs" />
     <Compile Include="Infrastructure\MultipartProviders\CustomMultipartFormDataStreamProvider.cs" />
     <Compile Include="Infrastructure\Cors\WebApiCorsPolicyProviderFactory.cs" />
     <Compile Include="Infrastructure\Cors\WebApiCorsPolicyProvider.cs" />
