--- a/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Case\Options\CaseOptionsOutputModel.cs" />
     <Compile Include="Case\Options\GetCaseOptionsInputModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StateSecondaries\StateSecondaryOutputModel.cs" />
     <Compile Include="WorkingGroup\WorkingGroupOutputModel.cs" />
   </ItemGroup>
   <ItemGroup>
