--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.DhDev.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.DhDev.config
@@ -21,7 +21,7 @@
     <add key="dh_filesDirectory" value="C:\DHHelpdeskUTV_Documents" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="dh_selfserviceaddress" value="dhHelpdeskUTV/Selfservice/case/Index/"  xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="DefaultCulture" value="sv" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="SmtpServer" value="localhost" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SmtpServer" value="smtp.datahalland.se" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="SmtpPort" value="25" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
   
