--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
@@ -15,7 +15,7 @@
     <add key="dh_filesDirectory" value="#{FilesDirectory}" />
     <add key="dh_selfserviceaddress" value="#{SelfServiceAddress}" />
     <add key="DefaultCulture" value="sv" />
-    <add key="SmtpServer" value="localhost" />
+    <add key="SmtpServer" value="smtp.datahalland.se" />
     <add key="SmtpPort" value="25" />
   </appSettings>
   
