--- a/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
@@ -174,6 +174,7 @@
     <Compile Include="BusinessLogic\CaseDocument\CaseDocumentReplacePropertiesResult.cs" />
     <Compile Include="BusinessLogic\Cases\CaseHelper.cs" />
     <Compile Include="BusinessLogic\Cases\CaseProcessor.cs" />
+    <Compile Include="BusinessLogic\Cases\ExtendedCaseTemplateParser.cs" />
     <Compile Include="BusinessLogic\Condition\ConditionPropertyException.cs" />
     <Compile Include="BusinessLogic\Condition\ConditionResult.cs" />
     <Compile Include="BusinessLogic\Condition\ConditionParseException.cs" />
