--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
@@ -13,7 +13,8 @@
   <appSettings>
     <add key="log4net.Internal.Debug" value="false" />
     <add key="dh_filesDirectory" value="C:\DHHelpdeskUTV_Documents" />
-    <add key="dh_selfserviceaddress" value="dhHelpdeskUTV/Selfservice/case/Index/" />
+    <add key="dh_selfserviceaddress" value="dhHelpdeskUTV/Selfservice/" />
+    <add key="dh_helpdeskaddress" value="dhHelpdeskUTV/" />
     <add key="DefaultCulture" value="sv" />
     <add key="SmtpServer" value="localhost" />
     <add key="SmtpPort" value="25" />
