jwe: fix for autologin

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
@@ -109,7 +109,7 @@
   <system.web>
 
     <authorization>
-      <deny users="?" />
+      <allow users="*" />
     </authorization>
     <!--<authentication mode="None" />-->
     <httpRuntime targetFramework="4.5.2" requestValidationMode="4.5" />
