--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
@@ -38,8 +38,9 @@
   <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net452" />
-  <package id="Microsoft.VisualStudio.SlowCheetah" version="3.1.66" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.ReportViewer.2012.Runtime" version="11.0.3452.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.SlowCheetah" version="3.1.66" targetFramework="net452" developmentDependency="true" />
   <package id="Modernizr" version="1.7" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
