--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
@@ -190,10 +190,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\SwaggerConfig.cs" />
+    <Compile Include="Controllers\CaseHistoryController.cs" />
+    <Compile Include="Controllers\CaseLogsController.cs" />
     <Compile Include="Controllers\PerfomersController.cs" />
     <Compile Include="Controllers\StateSecondariesController.cs" />
     <Compile Include="Controllers\WorkingGroupsController.cs" />
     <Compile Include="Infrastructure\ActionResults\ForbiddenResult.cs" />
+    <Compile Include="Infrastructure\Mapper\Profiles\EntitiesToModelMappingProfile.cs" />
     <Compile Include="Infrastructure\MultipartProviders\CustomMultipartFormDataStreamProvider.cs" />
     <Compile Include="Infrastructure\Cors\WebApiCorsPolicyProviderFactory.cs" />
     <Compile Include="Infrastructure\Cors\WebApiCorsPolicyProvider.cs" />
