--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -329,6 +329,8 @@
     <Compile Include="Models\Grid\GridColumnDefinition.cs" />
     <Compile Include="Models\Grid\GridSettingsModel.cs" />
     <Compile Include="Models\IdName.cs" />
+    <Compile Include="Models\Inventory\Edit\Settings\ComputerSettings\WorkstationTabsSettings.cs" />
+    <Compile Include="Models\Inventory\Edit\Settings\ComputerSettings\TabSetting.cs" />
     <Compile Include="Models\Inventory\InventorySearchResult.cs" />
     <Compile Include="Models\Inventory\Output\Computer\ComputerTypeOverview.cs" />
     <Compile Include="Models\Invoice\CaseInvoiceOrderFile.cs" />
