--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -341,6 +341,8 @@
     <Compile Include="Areas\Inventory\Models\BaseEditCustomInventoryModel.cs" />
     <Compile Include="Areas\Inventory\Models\BaseEditPrinterModel.cs" />
     <Compile Include="Areas\Inventory\Models\EditModel\Printer\PrinterEditViewModel.cs" />
+    <Compile Include="Areas\Inventory\Models\EditModel\Settings\Computer\TabSettingModel.cs" />
+    <Compile Include="Areas\Inventory\Models\EditModel\Settings\Computer\WorkstationTabsSettingsModel.cs" />
     <Compile Include="Areas\Inventory\Models\RelatedCasesModels\CustomInventoryRelatedCasesModel.cs" />
     <Compile Include="Areas\Inventory\Models\RelatedCasesModels\PrinterRelatedCasesModel.cs" />
     <Compile Include="Areas\Inventory\Models\RelatedCasesModels\WorkstationRelatedCasesModel.cs" />
@@ -3403,6 +3405,8 @@
     <Content Include="Reports\ReportedTime.rdl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Areas\Inventory\Views\InventorySettings\EditorTemplates\Settings\ComputerTabFieldsSettingsViewModel.cshtml" />
+    <Content Include="Areas\Inventory\Views\InventorySettings\EditorTemplates\Settings\TabSettingForComputerModel.cshtml" />
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="ReportViewerWebForm.aspx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
