--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -343,6 +343,7 @@
     <Compile Include="Areas\Inventory\Models\EditModel\Printer\PrinterEditViewModel.cs" />
     <Compile Include="Areas\Inventory\Models\EditModel\Settings\Computer\TabSettingModel.cs" />
     <Compile Include="Areas\Inventory\Models\EditModel\Settings\Computer\WorkstationTabsSettingsModel.cs" />
+    <Compile Include="Areas\Inventory\Models\InventoryTypesViewModel.cs" />
     <Compile Include="Areas\Inventory\Models\RelatedCasesModels\CustomInventoryRelatedCasesModel.cs" />
     <Compile Include="Areas\Inventory\Models\RelatedCasesModels\PrinterRelatedCasesModel.cs" />
     <Compile Include="Areas\Inventory\Models\RelatedCasesModels\WorkstationRelatedCasesModel.cs" />
@@ -980,16 +981,16 @@
     <Compile Include="Areas\Inventory\Models\SearchModels\InventoryReportSearchFilter.cs" />
     <Compile Include="Areas\Inventory\Models\SearchModels\InventoryReportSearchViewModel.cs" />
     <Compile Include="Areas\Inventory\Models\SearchModels\InventorySearchFilter.cs" />
-    <Compile Include="Areas\Inventory\Models\SearchModels\InventorySearchViewModel.cs" />
+    <Compile Include="Areas\Inventory\Models\SearchModels\ViewModels\InventorySearchViewModel.cs" />
     <Compile Include="Areas\Inventory\Models\SearchModels\PrinterSearchFilter.cs" />
-    <Compile Include="Areas\Inventory\Models\SearchModels\PrinterSearchViewModel.cs" />
+    <Compile Include="Areas\Inventory\Models\SearchModels\ViewModels\PrinterSearchViewModel.cs" />
     <Compile Include="Areas\Inventory\Models\SearchModels\ReportsIndexViewModel.cs" />
     <Compile Include="Areas\Inventory\Models\SearchModels\ReportsSearchFilter.cs" />
-    <Compile Include="Areas\Inventory\Models\SearchModels\ReportsSearchViewModel.cs" />
+    <Compile Include="Areas\Inventory\Models\SearchModels\ViewModels\ReportsSearchViewModel.cs" />
     <Compile Include="Areas\Inventory\Models\SearchModels\ServerSearchFilter.cs" />
-    <Compile Include="Areas\Inventory\Models\SearchModels\ServerSearchViewModel.cs" />
-    <Compile Include="Areas\Inventory\Models\SearchModels\SettingsIndexViewModel.cs" />
-    <Compile Include="Areas\Inventory\Models\SearchModels\WorkstationSearchViewModel.cs" />
+    <Compile Include="Areas\Inventory\Models\SearchModels\ViewModels\ServerSearchViewModel.cs" />
+    <Compile Include="Areas\Inventory\Models\SearchModels\ViewModels\SettingsIndexViewModel.cs" />
+    <Compile Include="Areas\Inventory\Models\SearchModels\ViewModels\WorkstationSearchViewModel.cs" />
     <Compile Include="Areas\Inventory\Models\SearchModels\WorkstationsSearchFilter.cs" />
     <Compile Include="Areas\Inventory\Models\Tabs.cs" />
     <Compile Include="Areas\Licenses\Controllers\ApplicationsController.cs" />
