--- a/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
@@ -181,6 +181,7 @@
     <Compile Include="GDPR\GDPROperationsAudit.cs" />
     <Compile Include="GDPR\GDPRTask.cs" />
     <Compile Include="GDPR\Enums\GDPRTaskStatus.cs" />
+    <Compile Include="Inventory\InventoryTypeStandardSettings.cs" />
     <Compile Include="Invoice\InvoiceArticleProductAreaEntity.cs" />
     <Compile Include="Invoice\InvoiceChargeType.cs" />
     <Compile Include="Invoice\InvoiceStatus.cs" />
