--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -41,7 +41,7 @@
     },
     "devDependencies": {
         "@angular-builders/custom-webpack": "^2.5.4",
-        "@angular-devkit/build-angular": "~0.10.0",
+        "@angular-devkit/build-angular": "^0.12.2",
         "@angular/cli": "^7.0.6",
         "@angular/compiler-cli": "^7.1.0",
         "@angular/language-service": "^7.1.0",
