--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -37,6 +37,7 @@
         "rxjs": "^6.3.3",
         "rxjs-compat": "^6.3.3",
         "tslint-angular": "^1.1.2",
+        "uuid": "^3.3.2",
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
