--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Models\Case\CaseFileContent.cs" />
     <Compile Include="Models\Case\CaseLockSettings.cs" />
     <Compile Include="Models\Case\CaseLock\CaseLockInfo.cs" />
+    <Compile Include="Models\Case\CaseLogs\CaseLog.cs" />
     <Compile Include="Models\Case\CaseSectionInfo.cs" />
     <Compile Include="Models\Case\CaseSolutionConditionOverview.cs" />
     <Compile Include="Models\Case\CaseSolutionInfo.cs" />
