--- a/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Case\Field\BaseCaseField.cs" />
     <Compile Include="Case\GetCaseFileInputModel.cs" />
     <Compile Include="Case\GetCaseInputModel.cs" />
+    <Compile Include="Case\Histories\CaseHistoryOutputModel.cs" />
     <Compile Include="Case\Logs\CaseLogOutputModel.cs" />
     <Compile Include="Case\Options\CaseOptionsOutputModel.cs" />
     <Compile Include="Case\Options\GetCaseOptionsInputModel.cs" />
