#66535 - Actions / Händelser - API - added other fields

--- a/dhHelpdeskNG/DH.Helpdesk.Web.Common/DH.Helpdesk.Web.Common.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Web.Common/DH.Helpdesk.Web.Common.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Enums\Case\AccessMode.cs" />
     <Compile Include="Enums\Case\RemainingTimes.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Extensions\UserFormatterExtension.cs" />
     <Compile Include="Models\CaseSearch\SearchModel.cs" />
     <Compile Include="Models\Case\CaseRemainingTimeTable.cs" />
     <Compile Include="Models\CurrentUser\UserSettingsModelOutput.cs" />
