#65948 - Secured password for mail2ticket

--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
@@ -6,8 +6,15 @@
   <appSettings>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="DeniedHtmlBodyString" value="concursolutions.com" />
-    <add key="enableNewEmailProcessing" value="False" />
+    <add key="enableNewEmailProcessing" value="False" /> <!-- newmode-->
+    <add key="WorkingMode" value="" /> <!--5 or Empty-->
+    <add key="LogFolder" value="" /> <!--Example: C:\temp-->
+    <add key="LogIdentifier" value="" /> <!-- -->
+    <add key="ProductAreaSeparator" value="" /> <!--separator symbol. Example: ;-->
   </appSettings>
+  <connectionStrings>
+    <add name="Helpdesk" connectionString="Data Source=DHUTVSQL2; Initial Catalog=DH_Support; User Id=sa; Password=;Network Library=dbmssocn" />
+  </connectionStrings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
