#65948 - Secured password for mail2ticket - added SecureConnectionString key

--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
@@ -5,6 +5,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="SecureConnectionString" value="False" />
     <add key="DeniedHtmlBodyString" value="concursolutions.com" />
     <add key="enableNewEmailProcessing" value="False" /> <!-- newmode-->
     <add key="WorkingMode" value="" /> <!--5 or Empty-->
