#68597	Secured password for Helpdesk Scheduler

--- a/dhHelpdeskNG/DH.Helpdesk.Schedule/app.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Schedule/app.config
@@ -1,10 +1,18 @@
 <?xml version="1.0"?>
 <configuration>
 
+  <appSettings>
+    <add key="SecureConnectionString" value="true" />
+  </appSettings>
+  
+  <!-- connection strings example:    
   <connectionStrings>
-    <add name="Helpdesk" connectionString="Data Source=DHUTVSQL2; Initial Catalog=DH_Support; User Id=sa; Password=;Network Library=dbmssocn" />
+      <add name="Helpdesk" connectionString="Data Source=<server>; Initial Catalog=<db>; User Id=<uid>; Password=<pwd>;Network Library=dbmssocn" />
   </connectionStrings>
-
+  -->
+  <connectionStrings>
+      <add name="Helpdesk" connectionString="Data Source=DHUTVSQL2; Initial Catalog=DH_Support; User Id=sa; Password=;Network Library=dbmssocn" />
+  </connectionStrings>
   <system.diagnostics>
     <sources>
       <!-- This section defines the logging configuration for My.Application.Log -->
