--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Controllers\CaseHistoryController.cs" />
     <Compile Include="Controllers\CaseLogsController.cs" />
     <Compile Include="Controllers\CaseWatchDateController.cs" />
+    <Compile Include="Infrastructure\Owin\GlobalExceptionMiddleware.cs" />
     <Compile Include="Logic\Case\CaseTranslationService.cs" />
     <Compile Include="Controllers\PerfomersController.cs" />
     <Compile Include="Controllers\StateSecondariesController.cs" />
