--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.21",
     "ng2-file-upload": "^1.3.0",
+    "ng2-pdf-viewer": "^5.2.3",
     "ngx-moment": "^3.3.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
