--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --stats-json",
-    "build_dhdev": "ng build --stats-json --prod --configuration=dhdev",
+    "build_dev-prod": "ng build --stats-json --prod --configuration=dev-prod",
     "build_prod": "ng build --prod --configuration=production",
     "bundle-report": "webpack-bundle-analyzer wwwroot/build/stats.json -m static",
     "test": "ng test",
@@ -35,7 +35,6 @@
     "moment-timezone": "^0.5.21",
     "ng2-file-upload": "^1.3.0",
     "ng2-pdf-viewer": "^5.2.3",
-    "ngx-moment": "^3.3.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
     "uuid": "^3.3.2",
