#68674 - replaced momentjs with luxon to reduce size

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/.vscode/tasks.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/.vscode/tasks.json
@@ -18,6 +18,11 @@
         "type": "npm",
         "script": "build_dhdev",
         "problemMatcher": []
+      },
+      {
+        "type": "npm",
+        "script": "build_dev-prod",
+        "problemMatcher": []
       }
     ]
   }
