--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -31,8 +31,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "^2.6.4",
     "file-saver": "^2.0.0",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.21",
+    "luxon": "^1.11.3",
     "ng2-file-upload": "^1.3.0",
     "ng2-pdf-viewer": "^5.2.3",
     "rxjs": "^6.4.0",
@@ -49,7 +48,7 @@
     "@types/file-saver": "^2.0.0",
     "@types/jasmine": "^3.3.8",
     "@types/jasminewd2": "~2.0.6",
-    "@types/moment-timezone": "^0.5.10",
+    "@types/luxon": "^1.11.1",
     "@types/node": "^10.12.21",
     "codelyzer": "^4.5.0",
     "jasmine-core": "^3.3.0",
@@ -60,12 +59,11 @@
     "karma-coverage-istanbul-reporter": "~2.0.4",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "moment-locales-webpack-plugin": "^1.0.7",
     "protractor": "^5.4.2",
     "ts-node": "~8.0.2",
     "tslint": "^5.12.1",
+    "tslint-angular": "^1.1.2",
     "typescript": "~3.2.4",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "tslint-angular": "^1.1.2"
+    "webpack-bundle-analyzer": "^3.0.3"
   }
 }
