--- a/ExtendedCase/ExtendedCase.WebApi/Web.config
+++ b/ExtendedCase/ExtendedCase.WebApi/Web.config
@@ -20,6 +20,11 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <pages>
+      <namespaces>
+        <clear />
+      </namespaces>
+    </pages>
   </system.web>
   
   <runtime>
