--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
@@ -14,7 +14,7 @@
     <add key="ProductAreaSeparator" value="" /> <!--separator symbol. Example: ;-->
   </appSettings>
   <connectionStrings>
-    <add name="Helpdesk" connectionString="Data Source=DHUTVSQL2; Initial Catalog=DH_Support; User Id=sa; Password=;Network Library=dbmssocn" />
+    <add name="Helpdesk" connectionString="Data Source=DHUTVSQL6; Initial Catalog=Helpdesk-Dev; User Id=helpdesk-dev; Password=helpdesk-dev;Network Library=dbmssocn" />
   </connectionStrings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
