--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Models\Case\CaseSolutionOverview.cs" />
     <Compile Include="Models\Case\ExtendedCaseDataOverview.cs" />
     <Compile Include="Models\Case\LogFileContent.cs" />
+    <Compile Include="Models\Case\Output\CustomerCasesStatus.cs" />
     <Compile Include="Models\Case\UserWorkingGroupOverview.cs" />
     <Compile Include="Models\Case\WorkingGroupInfo.cs" />
     <Compile Include="Models\Changes\ChangeListItem.cs" />
