fixes for email engine service (could not have several services)

--- a/dhHelpdeskNG/DH.Helpdesk.EmailEngine.WinService/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.EmailEngine.WinService/App.config
@@ -17,6 +17,7 @@
     <add key="MaxAttempts" value="5" />
     <add key="DefaultSmtpServer" value="smtp.datahalland.se" />
     <add key="DefaultSmtpPort" value="25" />
+    <add key="ServiceName" value="DH Helpdesk Email Engine"/>
   </appSettings>
   <log4net>
     <appender name="LogToErrorFile" type="log4net.Appender.RollingFileAppender">
